--- a/hit_maintenance/views/hit_maintenance_menus.xml
+++ b/hit_maintenance/views/hit_maintenance_menus.xml
@@ -8,6 +8,12 @@
         parent="maintenance.menu_m_request"
         action="action_reservation_act_window"
         />
+        <menuitem
+        id="return_request_menu"
+        name="Return Request" 
+        parent="maintenance.menu_m_request"
+        action="action_return_request_act_window"
+        />
 
     </data>
 </odoo>
