--- a/hit_maintenance/views/return_request.xml
+++ b/hit_maintenance/views/return_request.xml
@@ -4,29 +4,25 @@
     
    
     <!-- Tree view for "reservation" -->
-    <record id="view_reservation_tree" model="ir.ui.view">
-        <field name="name">view.reservation.tree</field>
-        <field name="model">reservation</field>
+    <record id="view_return_request_tree" model="ir.ui.view">
+        <field name="name">view.return.request.tree</field>
+        <field name="model">return.request</field>
         <field name="type">tree</field>
         <field name="mode">primary</field>
         <field name="priority" eval="16" />
         <field name="active" eval="True" />
         <field name="arch" type="xml">
             <tree string="reservation_tree" create="true" delete="true" edit="true">
-                <field name="name" optional="1"/>
-                <field name="equipment" />
-                <field name="status" />
-                <field name="value" />
-                <field name="create_date" optional="1"/>
-                <field name="create_uid" optional="1"/>
+                <field name="name"/>
+                <field name="transfer_id" />
             </tree>
         </field>
     </record>
     
     <!-- Form view for "model" -->
-    <record id="view_reservation_form" model="ir.ui.view">
-        <field name="name">view.reservation.form</field>
-        <field name="model">reservation</field>
+    <record id="view_return_request_form" model="ir.ui.view">
+        <field name="name">view.return.request.form</field>
+        <field name="model">return.request</field>
         <field name="type">form</field>
         <field name="mode">primary</field>
         <field name="priority" eval="16" />
@@ -34,11 +30,8 @@
         <field name="arch" type="xml">
             <form string="reservation_form" create="true" delete="true" edit="true">
                 <header>
-                    <field name="status" widget="statusbar" clickable="0"/>
                 </header>
                 <sheet>
-                    <field name="kanban_state" widget="state_selection"/>
-                    <field class="oe_avatar" widget="image" name="image"/>
                     <div class="oe_title">
                         <label for="name" class="oe_edit_only" />
                         <h1>
@@ -48,11 +41,10 @@
                     </div>
                     <group>
                         <group>
-                            <field name="work_order" />
-                            <field name="equipment" />
-                            <field name="analytic_account_id" />
-                            <field name="reservation_type" />
-                            <field name="description" />
+                            <field name="reservation_id" />
+                            <field name="equipment_id" />
+                            <field name="work_order_id" />
+                            <field name="return_document_id" />
                         </group>
                         <group>
                             <field name="create_date" />
@@ -60,24 +52,15 @@
                         </group>
                     </group>
                     <notebook>
-                        <page name="details" string="Details">
-                            <field name="reservation_line_ids">
+                        <page name="details" string="Return Product">
+                            <field name="return_request_ids">
                                 <tree>
                                     <field name="product_id" />
                                     <field name="quantity" />
-                                    <field name="uom" />
-                                    <field name="price" />
-                                    <field name="total_price" />
+                                    <field name="uom_id" />
+                                    <field name="description" />
                                 </tree>
                             </field>
-                            <group name="footer">
-                                <group name="left">
-                                    <field name="value" />
-                                </group>
-                                <group name="right">
-                                    <field name="signature" widget="signature"/>
-                                </group>
-                            </group>
                         </page>
                     </notebook>
                 </sheet>
@@ -102,11 +85,11 @@
     </record> -->
     
     <!-- Main window action for "model" -->
-    <record id="action_reservation_act_window" model="ir.actions.act_window">
+    <record id="action_return_request_act_window" model="ir.actions.act_window">
         <field name="type">ir.actions.act_window</field>
-        <field name="name">Reservation</field>
-        <field name="res_model">reservation</field>
-        <field name="view_mode">tree,form,map</field>
+        <field name="name">Return Request</field>
+        <field name="res_model">return.request</field>
+        <field name="view_mode">tree,form</field>
         <!-- <field name="view_type">form</field>
         <field name="target">current</field>
         <field name="domain">[]</field>
