--- a/hit_maintenance/views/hit_maintenance_menus.xml
+++ b/hit_maintenance/views/hit_maintenance_menus.xml
@@ -14,6 +14,12 @@
         parent="maintenance.menu_m_request"
         action="action_return_request_act_window"
         />
+        <menuitem
+        id="measuring_equipment_menu"
+        name="Measuring Equipment" 
+        parent="maintenance.menu_m_request"
+        action="action_measuring_equipment_act_window"
+        />
 
     </data>
 </odoo>
