--- a/hit_maintenance/views/brand.xml
+++ b/hit_maintenance/views/brand.xml
@@ -2,17 +2,16 @@
 <odoo>
     <data>
 
-        <record id="view_eqp_class_tree" model="ir.ui.view">
-        <field name="name">view.eqp.class.tree</field>
-        <field name="model">eqp.class</field>
+        <record id="view_brand_tree" model="ir.ui.view">
+        <field name="name">view.brand.tree</field>
+        <field name="model">brand</field>
         <field name="type">tree</field>
         <field name="mode">primary</field>
         <field name="priority" eval="16" />
         <field name="active" eval="True" />
         <field name="arch" type="xml">
-            <tree string="eqp_class_tree" create="true" delete="true" edit="true">
+            <tree string="brand_tree" create="true" delete="true" edit="true">
                 <field name="name"/>
-                <field name="description" optional="1"/>
                 <field name="active" optional="1"/>
                 <field name="equipment_count" optional="1"/>
                 <field name="create_date" optional="0"/>
@@ -22,15 +21,15 @@
     </record>
     
     
-    <record id="view_eqp_class_form" model="ir.ui.view">
-        <field name="name">view.eqp.class.form</field>
-        <field name="model">eqp.class</field>
+    <record id="view_brand_form" model="ir.ui.view">
+        <field name="name">view.brand.form</field>
+        <field name="model">brand</field>
         <field name="type">form</field>
         <field name="mode">primary</field>
         <field name="priority" eval="16" />
         <field name="active" eval="True" />
         <field name="arch" type="xml">
-            <form string="eqp_class_form" create="true" delete="true" edit="true">
+            <form string="brand_form" create="true" delete="true" edit="true">
                 <header>
                 </header>
                 <sheet>
@@ -49,7 +48,6 @@
                     </div>
                     <group>
                         <group name="equipment" string="Equipment">
-                            <field name="description" />
                             <field name="active" widget="boolean_toggle"/>
                         </group>
                         <group name="details" string="Details">
@@ -66,10 +64,10 @@
     </record>
 
 
-    <record id="action_eqp_class_act_window" model="ir.actions.act_window">
+    <record id="action_brand_act_window" model="ir.actions.act_window">
         <field name="type">ir.actions.act_window</field>
-        <field name="name">Equipment Class and Type</field>
-        <field name="res_model">eqp.class</field>
+        <field name="name">Brand</field>
+        <field name="res_model">brand</field>
         <field name="view_mode">tree,form</field>
         <!-- <field name="view_type">form</field>
         <field name="target">current</field>
