create unit model master data menu

--- a/hit_maintenance/views/hit_maintenance_menus.xml
+++ b/hit_maintenance/views/hit_maintenance_menus.xml
@@ -40,6 +40,12 @@
         parent="master_data_menu"
         action="action_brand_act_window"
         />
+        <menuitem
+        id="master_data_unit_model_menu"
+        name="Unit Model" 
+        parent="master_data_menu"
+        action="action_unit_model_act_window"
+        />
 
 
     </data>
