--- a/hit_maintenance/views/eqp_attachment_views.xml
+++ b/hit_maintenance/views/eqp_attachment_views.xml
@@ -2,15 +2,15 @@
 <odoo>
     <data>
 
-        <record id="view_unit_model_tree" model="ir.ui.view">
-        <field name="name">view.unit.model.tree</field>
-        <field name="model">unit.model</field>
+        <record id="view_eqp_attachment_tree" model="ir.ui.view">
+        <field name="name">view.eqp.attachment.tree</field>
+        <field name="model">eqp.attachment</field>
         <field name="type">tree</field>
         <field name="mode">primary</field>
         <field name="priority" eval="16" />
         <field name="active" eval="True" />
         <field name="arch" type="xml">
-            <tree string="unit_model_tree" create="true" delete="true" edit="true">
+            <tree string="eqp_attachment_tree" create="true" delete="true" edit="true">
                 <field name="name"/>
                 <field name="active" optional="1"/>
                 <field name="equipment_count" optional="1"/>
@@ -21,21 +21,21 @@
     </record>
     
     
-    <record id="view_unit_model_form" model="ir.ui.view">
-        <field name="name">view.unit.model.form</field>
-        <field name="model">unit.model</field>
+    <record id="view_eqp_attachment_form" model="ir.ui.view">
+        <field name="name">view.eqp.attachment.form</field>
+        <field name="model">eqp.attachment</field>
         <field name="type">form</field>
         <field name="mode">primary</field>
         <field name="priority" eval="16" />
         <field name="active" eval="True" />
         <field name="arch" type="xml">
-            <form string="unit_model_form" create="true" delete="true" edit="true">
+            <form string="eqp_attachment_form" create="true" delete="true" edit="true">
                 <header>
                 </header>
                 <sheet>
                     <widget name="web_ribbon" text="Archived" bg_color="bg-danger" attrs="{'invisible': [('active', '=', True)]}"/>
                     <!-- <div name="button_box" class="oe_button_box">
-                        <button class="oe_stat_button" icon="fa-random" type="action" name="equipment_count_unit.model">
+                        <button class="oe_stat_button" icon="fa-random" type="action" name="equipment_count_eqp.attachment">
                             <field widget="statinfo" name="equipment_count" string="Equipment"/>
                         </button>
                     </div> -->
@@ -64,10 +64,10 @@
     </record>
 
 
-    <record id="action_unit_model_act_window" model="ir.actions.act_window">
+    <record id="action_eqp_attachment_act_window" model="ir.actions.act_window">
         <field name="type">ir.actions.act_window</field>
-        <field name="name">Unit Model</field>
-        <field name="res_model">unit.model</field>
+        <field name="name">Equipment Attachment</field>
+        <field name="res_model">eqp.attachment</field>
         <field name="view_mode">tree,form</field>
         <!-- <field name="view_type">form</field>
         <field name="target">current</field>
