--- a/hit_maintenance/views/hit_maintenance_menus.xml
+++ b/hit_maintenance/views/hit_maintenance_menus.xml
@@ -52,6 +52,13 @@
         parent="master_data_menu"
         action="action_engine_model_act_window"
         />
+        <menuitem
+        id="master_data_eqp_attachment_menu"
+        name="Equipment Attachment" 
+        parent="master_data_menu"
+        action="action_eqp_attachment_act_window"
+        />
+
 
 
     </data>
