--- a/hit_maintenance/views/hit_maintenance_menus.xml
+++ b/hit_maintenance/views/hit_maintenance_menus.xml
@@ -54,13 +54,13 @@
         />
         <menuitem
         id="master_data_eqp_attachment_menu"
-        name="Equipment Attachment" 
+        name="Attachment" 
         parent="master_data_menu"
         action="action_eqp_attachment_act_window"
         />
         <menuitem
         id="master_data_eqp_attachment_product_menu"
-        name="Equipment Attachment Product" 
+        name="Attachment Product" 
         parent="master_data_menu"
         action="action_eqp_attachment_product_act_window"
         />
