--- a/hit_maintenance/views/hit_maintenance_menus.xml
+++ b/hit_maintenance/views/hit_maintenance_menus.xml
@@ -76,6 +76,12 @@
         parent="master_data_menu"
         action="action_service_type_act_window"
         />
+        <menuitem
+        id="master_data_service_package_menu"
+        name="Service Package" 
+        parent="master_data_menu"
+        action="action_service_package_act_window"
+        />
 
 
 
