add reservation stage and tag views

--- a/hit_maintenance/views/hit_maintenance_menus.xml
+++ b/hit_maintenance/views/hit_maintenance_menus.xml
@@ -89,7 +89,18 @@
         action="action_standard_job_act_window"
         />
 
-
-
+        <!-- Configuration -->
+        <menuitem
+        id="reservation_stage_menu"
+        name="Reservation Stage" 
+        parent="maintenance.menu_maintenance_configuration"
+        action="action_reservation_stage_act_window"
+        />
+        <menuitem
+        id="reservation_tag_menu"
+        name="Reservation Tag" 
+        parent="maintenance.menu_maintenance_configuration"
+        action="action_reservation_tag_act_window"
+        />
     </data>
 </odoo>
