accounting view done

--- a/hit_accounting/views/hit_accounting_menus.xml
+++ b/hit_accounting/views/hit_accounting_menus.xml
@@ -8,5 +8,7 @@
         <menuitem id="master_data_location_menu" name="Location" action="action_location_act_window" parent="accounting_master_data_menu"/>
         <menuitem id="master_data_department_menu" name="Department" action="action_department_act_window" parent="accounting_master_data_menu"/>
         <menuitem id="process_activity_menu" name="Process Activity" action="action_process_line_act_window" parent="accounting_master_data_menu"/>
+        <menuitem id="process_activity_location_menu" name="Process Location" action="action_activity_location_act_window" parent="accounting_master_data_menu"/>
+        <menuitem id="process_activity_department_menu" name="Process Department" action="action_activity_location_department_act_window" parent="accounting_master_data_menu"/>
     </data>
 </odoo>
