--- a/hit_purchase/views/purchase_order_views.xml
+++ b/hit_purchase/views/purchase_order_views.xml
@@ -8,7 +8,7 @@
             <field name="inherit_id" ref="purchase.purchase_order_form"/>
             <field name="arch" type="xml">
 
-            <xpath expr="//field[@name='requisition_id']" position="after">
+            <xpath expr="//field[@name='partner_ref']" position="after">
                 <field name="complete_gr" />
                 <field name="create_by_pr" invisible="1"/>
             </xpath>
