--- a/hit_maintenance/views/reservation_views.xml
+++ b/hit_maintenance/views/reservation_views.xml
@@ -57,6 +57,7 @@
                         <group>
                             <field name="create_date" />
                             <field name="create_uid" />
+                            <field name="done_date" />
                         </group>
                     </group>
                     <notebook>
