compute total price on reservation

--- a/hit_maintenance/views/reservation_views.xml
+++ b/hit_maintenance/views/reservation_views.xml
@@ -71,6 +71,7 @@
                                     <field name="total_price" />
                                 </tree>
                             </field>
+                            <!-- Test Signature
                             <group name="footer">
                                 <group name="left">
                                     <field name="value" />
@@ -78,7 +79,7 @@
                                 <group name="right">
                                     <field name="signature" widget="signature"/>
                                 </group>
-                            </group>
+                            </group> -->
                         </page>
                     </notebook>
                 </sheet>
