--- a/hit_purchase/views/purchase_order_views.xml
+++ b/hit_purchase/views/purchase_order_views.xml
@@ -9,6 +9,7 @@
             <field name="arch" type="xml">
 
             <xpath expr="//field[@name='partner_ref']" position="after">
+                <field name="purchase_request_id" />
                 <field name="complete_gr" />
                 <field name="create_by_pr" invisible="1"/>
             </xpath>
