--- a/hit_maintenance/views/standard_job_views.xml
+++ b/hit_maintenance/views/standard_job_views.xml
@@ -56,6 +56,7 @@
                             <field name="process_line_id" />
                             <field name="location_id" />
                             <field name="department_id" />
+                            <field name="analytic_group_id" />
                             <field name="analytic_account_id" />
                             <field name="active" widget="boolean_toggle"/>
                         </group>
