[UPD] naming model adjustment, please use 'hit' as prefix for all custom module

--- a/hit_accounting/views/activity_views.xml
+++ b/hit_accounting/views/activity_views.xml
@@ -5,7 +5,7 @@
    
     <record id="view_activity_tree" model="ir.ui.view">
         <field name="name">view.activity.tree</field>
-        <field name="model">activity</field>
+        <field name="model">hit.activity</field>
         <field name="type">tree</field>
         <field name="mode">primary</field>
         <field name="priority" eval="16" />
@@ -25,7 +25,7 @@
     
     <record id="view_activity_form" model="ir.ui.view">
         <field name="name">view.activity.form</field>
-        <field name="model">activity</field>
+        <field name="model">hit.activity</field>
         <field name="type">form</field>
         <field name="mode">primary</field>
         <field name="priority" eval="16" />
@@ -61,7 +61,7 @@
     <!-- Search view for "model" -->
     <!-- <record id="view_model_search" model="ir.ui.view">
         <field name="name">view.model.search</field>
-        <field name="model">model</field>
+        <field name="model">hit.model</field>
         <field name="type">search</field>
         <field name="mode">primary</field>
         <field name="priority" eval="16" />
@@ -78,7 +78,7 @@
     <record id="action_activity_act_window" model="ir.actions.act_window">
         <field name="type">ir.actions.act_window</field>
         <field name="name">Activity</field>
-        <field name="res_model">activity</field>
+        <field name="res_model">hit.activity</field>
         <field name="view_mode">tree,form</field>
         <!-- <field name="view_type">form</field>
         <field name="target">current</field>
