--- a/hit_accounting/views/location_views.xml
+++ b/hit_accounting/views/location_views.xml
@@ -5,7 +5,7 @@
    
     <record id="view_location_tree" model="ir.ui.view">
         <field name="name">view.location.tree</field>
-        <field name="model">location</field>
+        <field name="model">hit.location</field>
         <field name="type">tree</field>
         <field name="mode">primary</field>
         <field name="priority" eval="16" />
@@ -25,7 +25,7 @@
     
     <record id="view_location_form" model="ir.ui.view">
         <field name="name">view.location.form</field>
-        <field name="model">location</field>
+        <field name="model">hit.location</field>
         <field name="type">form</field>
         <field name="mode">primary</field>
         <field name="priority" eval="16" />
@@ -61,7 +61,7 @@
     <!-- Search view for "model" -->
     <!-- <record id="view_model_search" model="ir.ui.view">
         <field name="name">view.model.search</field>
-        <field name="model">model</field>
+        <field name="model">hit.model</field>
         <field name="type">search</field>
         <field name="mode">primary</field>
         <field name="priority" eval="16" />
@@ -78,7 +78,7 @@
     <record id="action_location_act_window" model="ir.actions.act_window">
         <field name="type">ir.actions.act_window</field>
         <field name="name">location</field>
-        <field name="res_model">location</field>
+        <field name="res_model">hit.location</field>
         <field name="view_mode">tree,form</field>
         <!-- <field name="view_type">form</field>
         <field name="target">current</field>
