--- a/hit_maintenance/views/reservation_views.xml
+++ b/hit_maintenance/views/reservation_views.xml
@@ -58,6 +58,7 @@
                             <field name="create_date" />
                             <field name="create_uid" />
                             <field name="done_date" />
+                            <field name="create_by_wo" />
                         </group>
                     </group>
                     <notebook>
