--- a/hit_menu_access_right/views/hit_account_menu_view.xml
+++ b/hit_menu_access_right/views/hit_account_menu_view.xml
@@ -1,19 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
-    <data>
-
-    
-    <record id="account_asset_view_form_inherit" model="ir.ui.view">
-        <field name="name">account.asset.view.form.inherit</field>
-        <field name="model">account.asset</field>
-        <field name="inherit_id" ref="account_asset.view_account_asset_form"/>
-        <field name="arch" type="xml">
-            <xpath expr="//field[@name='original_value']" position="before">
-                <field name="asset_description" />
-            </xpath>
-        </field>
-    </record>
-    
-    
-    </data>
+     <menuitem name="Purchase"
+            id="purchase.menu_purchase_root"
+            groups="purchase.group_purchase_manager,purchase.group_purchase_user,hit_menu_access_right.group_hit_purch_asset_maintenance_director,hit_menu_access_right.group_hit_purch_asset_general_manager,hit_menu_access_right.group_hit_purch_purchase_officer,hit_menu_access_right.group_hit_purch_warehouse_officer"
+            web_icon="purchase,static/description/icon.svg"
+            sequence="135"/>
 </odoo>
