--- a/hit_pr_po_dashboard/views/pr_po_dashboard_views.xml
+++ b/hit_pr_po_dashboard/views/pr_po_dashboard_views.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
 	<data>
-		<record id="hit_pr_po_dashboard_graph" model="ir.ui.view" >
+		<record id="pr_po_dashboard_view_graph" model="ir.ui.view" >
 			<field name="name">PR PO Dashboard Graph</field>
 			<field name="model">purchase.order</field>
 			<field name="type">graph</field>
@@ -11,7 +11,13 @@
 				</graph>
 			</field>
 		</record>
-		<record id="pr_po_dashboard_view_form" model="ir.ui.view">
+		<record id="pr_po_dashboard_action_window" model="ir.actions.act_window">
+			<field name="name">Dashboard Report</field>
+			<field name="res_model">purchase.order</field>
+			<field name="view_mode">graph</field>
+		</record>
+		<!-- board.board model view -->
+		<record id="board_board_dashboard_view_form" model="ir.ui.view">
 			<field name="name">pr_po_dashboard_view_form</field>
 			<field name="model">board.board</field>
 			<field name="type">form</field>
@@ -19,30 +25,22 @@
 				<form string="PR PO Dashboard">
 					<board style="1-2">
 						<column>
+							<action string="Graph View" name="%(pr_po_dashboard_action_window)d"/>
 						</column>
 					</board>
 				</form>
 			</field>
 		</record>
-		<record id="hit_open_board_dashboard_action" model="ir.actions.act_window">
+		<!-- board.board window action -->
+		<record id="board_board_dashboard_action_window" model="ir.actions.act_window">
 			<field name="name">My Dashboard</field>
 			<field name="res_model">board.board</field>
 			<field name="view_mode">form</field>
 			<field name="usage">menu</field>
-			<field name="view_id" ref="pr_po_dashboard_view_form"/>
+			<field name="view_id" ref="board_board_dashboard_view_form"/>
 		</record>
-		<record id="hit_pr_po_dashboard_report_invoice_status_action_window" model="ir.actions.act_window">
-			<field name="name">Dashboard Report</field>
-			<field name="res_model">purchase.order</field>
-			<field name="view_mode">graph,tree</field>
-		</record>
-		<record id="hit_pr_po_dashboard_action_window" model="ir.actions.act_window">
-			<field name="name">Dashboard Report</field>
-			<field name="res_model">purchase.order</field>
-			<field name="view_mode">graph</field>
-		</record>
-		<menuitem id="pr_po_dashboard_report" name="Dashboard Report" parent="purchase.menu_purchase_root"/>
-		<menuitem id="pr_po_dashboard_report_invoice_status" name="Invoice Status" action="hit_pr_po_dashboard_report_invoice_status_action_window" parent="pr_po_dashboard_report"/>
-		<menuitem id="hit_open_board_dashboard_test" name="Test Dashboard" action="hit_open_board_dashboard_action" parent="pr_po_dashboard_report"/>
+		<!-- menuitem -->
+		<menuitem id="pr_po_dashboard_report_root" name="Dashboard Report" parent="purchase.menu_purchase_root"/>
+		<menuitem id="pr_po_dashboard_menu" name="PR PO Dashboard" action="board_board_dashboard_action_window" parent="pr_po_dashboard_report_root"/>
 	</data>
 </odoo>
