--- a/hit_hybrid_customization/views/account_payment_views.xml
+++ b/hit_hybrid_customization/views/account_payment_views.xml
@@ -7,6 +7,9 @@
             <field name="model">account.payment</field>
             <field name="inherit_id" ref="account.view_account_payment_form" />
             <field name="arch" type="xml">
+                <xpath expr="//field[@name='partner_id']" position="after">
+                    <field name="advance"/>
+                </xpath>
                 <xpath expr="//field[@name='ref']" position="after">
                     <field name="account_move_id"/>
                 </xpath>
