--- a/hit_hybrid_customization/views/purchase_order_views.xml
+++ b/hit_hybrid_customization/views/purchase_order_views.xml
@@ -1,18 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
     <data>
-        <!-- primary|extension Inherited .:Form:. view for "model" -->
-        <record id="hit_purchase_order_view_model_form_inherited" model="ir.ui.view">
-            <field name="name">hit.purchase.order.view.model.form.inherited</field>
+        <record id="hit_purchase_order_inherited" model="ir.ui.view">
+            <field name="name">hit purchase order view model form inherited</field>
             <field name="model">purchase.order</field>
-            <!-- Please veryfiy, that the following inherited view really sticks to the naming convention. -->
             <field name="inherit_id" ref="purchase.purchase_order_form" />
             <field name="type">form</field>
             <field name="mode">extension</field>
             <field name="arch" type="xml">
-                <xpath expr="//button[@name='print_quotation']" position="after">
-                    <button name="alter_print_quotation" string="Print RFQ Alter" type="object" states="draft"/>
-                    <button name="alter_print_quotation" string="Print RFQ Alter" type="object" states="sent"/>
+                <!-- <xpath expr="//field[@name='partner_id']" position="after">
+                    <field name="test_mayna" />
+                </xpath> -->
+                <xpath expr="//button[@name='button_unlock']" position="after">
+                    <button name="button_confirm_rfq" type="object" string="Confirm Order" states="draft" class="oe_highlight"/>
+                </xpath>
+                <xpath expr="//button[@name='print_quotation']" position="attributes">
+                    <attribute name="invisible">1</attribute>
+                </xpath>
+                <xpath expr="//button[@name='print_quotation'][2]" position="attributes">
+                    <attribute name="invisible">1</attribute>
+                </xpath>
+                <xpath expr="//button[@name='button_confirm']" position="attributes">
+                    <attribute name="invisible">1</attribute>
+                </xpath>
+                <xpath expr="//button[@name='button_confirm'][2]" position="attributes">
+                    <attribute name="invisible">1</attribute>
                 </xpath>
             </field>
         </record>
