--- a/hit_hybrid_customization/views/maintenance_request_views.xml
+++ b/hit_hybrid_customization/views/maintenance_request_views.xml
@@ -11,7 +11,7 @@
                     <field name="wo_done_date_time"/>
                 </xpath>
                 <xpath expr="//field[@name='equipment_id']" position="after">
-                    <field name="x_studio_work_order_type"/>
+                    <field name="x_studio_work_order_type" invisible="1"/>
                     <field name="inspection_id" attrs="{'invisible': [('x_studio_work_order_type', '=', 'Perbaikan')]}"/>
                 </xpath>
             </field>
