make it general into just file, not pdf only

--- a/hit_condition_monitoring/views/hit_condition_monitoring_views.xml
+++ b/hit_condition_monitoring/views/hit_condition_monitoring_views.xml
@@ -71,7 +71,7 @@
                             <page string="Attachment" name="attachment">
                                 <group>
                                     <group>
-                                        <field name="attachment" widget="pdf_viewer" filename="attachment_name"/>
+                                        <field name="attachment"/>
                                     </group>
                                     <group>
                                     </group>
