--- a/hit_hybrid_customization/views/purchase_order_views.xml
+++ b/hit_hybrid_customization/views/purchase_order_views.xml
@@ -23,6 +23,9 @@
                 <xpath expr="//button[@name='button_confirm'][2]" position="attributes">
                     <attribute name="invisible">1</attribute>
                 </xpath>
+                <xpath expr="//field[@name='partner_id']" position="after">
+                    <field name="site_id"/>
+                </xpath>
             </field>
         </record>
     </data>
