--- a/hit_hybrid_customization/views/account_payment_views.xml
+++ b/hit_hybrid_customization/views/account_payment_views.xml
@@ -12,6 +12,7 @@
                 </xpath>
                 <xpath expr="//field[@name='ref']" position="after">
                     <field name="account_move_id"/>
+                    <field name="analytic_account_id" />
                 </xpath>
             </field>
         </record>
