--- a/hit_hybrid_customization/views/purchase_order_views.xml
+++ b/hit_hybrid_customization/views/purchase_order_views.xml
@@ -10,6 +10,8 @@
             <field name="arch" type="xml">
                 <xpath expr="//button[@name='button_unlock']" position="after">
                     <button name="button_confirm_rfq" type="object" string="Request Approval" states="draft" class="oe_highlight"/>
+                    <!-- for testing purpose, please comment button helper again -->
+                    <!-- <button name="button_confirm" type="object" string="Confirm Helper" class="oe_highlight"/> -->
                 </xpath>
                 <xpath expr="//button[@name='print_quotation']" position="attributes">
                     <attribute name="invisible">1</attribute>
